add get shop Id